syntax = "proto3";

package datanode_namenode;

service DatanodeNamenode {
  rpc Connection(ConnectionRequest) returns (ConnectionResponse); // as connect name is already taken
  rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResponse);
  rpc StateSync(StateSyncRequest) returns (StateSyncResponse);
  rpc StoreChunkTicket(StoreChunkTicketRequest) returns (StoreChunkTicketResponse);
}

message ConnectionRequest{
  string id =1;
  string addrs=2;
  string name =3;
}
message ConnectionResponse{
  bool connected=1;
  string msg= 2;
}
message StateSyncRequest{
  string id =1;
  uint64 availabe_storage=2;
  repeated string available_chunks=3;
}
message StateSyncResponse{
  repeated string chunks_to_be_deleted=1;
}
message HeartBeatRequest {
  string datanode_id =1;
}

message HeartBeatResponse {
  bool connection_alive=1;
}

message StoreChunkTicketRequest{
  string chunk_id = 1;
  string source_id = 2;
  string target_id = 3;
}
message StoreChunkTicketResponse {
  string ticket  =1;
}
